# StandaloneFMU_Addition_binaries

./: CMakeLists.txt  README.md
model/: modelDescription.xml
src/: simulator.c
